force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <label>Account</label>
    <description></description>
</CustomObject>