force-app/main/default/objects/Account/fields/CustomerPriority__c.field-meta.xml
<CustomField>
    <fullName>CustomerPriority__c</fullName>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <isActive>true</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>true</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>true</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <label>Customer Priority</label>
</CustomField>