force-app/main/default/objects/Account/fields/GWR_Assigned__c.field-meta.xml
<CustomField>
    <fullName>GWR_Assigned__c</fullName>
    <label>GWR Assigned changed in ui</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Added a description from the UI</description>
</CustomField>