force-app/main/default/objects/Account/fields/GWR_backpromote__c.field-meta.xml
<CustomField>
    <fullName>GWR_backpromote__c</fullName>
    <label>GWR backpromote</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>