force-app/main/default/objects/Account/fields/GWR_checkbokx2__c.field-meta.xml
<CustomField>
    <fullName>GWR_checkbokx2__c</fullName>
    <label>__GWR checkbokx2</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>20250415-081542 prod</description>
</CustomField>