force-app/main/default/objects/Account/fields/GWR_new_checkbox__c.field-meta.xml
<CustomField>
    <fullName>GWR_new_checkbox__c</fullName>
    <label>GWR new checkbox</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>