force-app/main/default/objects/Account/fields/GWR_Scale__c.field-meta.xml
<CustomField>
    <fullName>GWR_Scale__c</fullName>
    <label>GWR Scale</label>
    <type>Number</type>
    <scale>0</scale>
    <precision>18</precision>
</CustomField>