force-app/main/default/objects/Account/fields/gwr_Status__c.field-meta.xml
<CustomField>
    <fullName>gwr_Status__c</fullName>
    <type>Text</type>
    <length>100</length>
    <description>gwr status 20230918-155404</description>
    <label>_gwr_Status</label>
</CustomField>