force-app/main/default/objects/Account/fields/GWR_text_1__c.field-meta.xml
<CustomField>
    <fullName>GWR_text_1__c</fullName>
    <label>GWR text 1</label>
    <type>Text</type>
    <length>30</length>
</CustomField>