force-app/main/default/objects/Account/fields/GWR_text_2__c.field-meta.xml
<CustomField>
    <fullName>GWR_text_2__c</fullName>
    <label>GWR text 2</label>
    <type>Text</type>
    <length>20</length>
</CustomField>