force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
                <isActive>true</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <isActive>true</isActive>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <isActive>true</isActive>
                <label>Bronze</label>
                <default>true</default>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <isActive>true</isActive>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Titanium</fullName>
                <isActive>true</isActive>
                <label>Titanium</label>
            </value>
            <value>
                <fullName>Tin</fullName>
                <isActive>true</isActive>
                <label>Tin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <label>SLA</label>
    <description>snapshot diff</description>
</CustomField>